<resources>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_make_order">MakeOrderActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Выход</string>
    <string name="title_activity_sing_up">SingUpActivity</string>
    <string name="title_activity_confirm_sign_up">Регистрация</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="title_activity_create_order">CreateOrderActivity</string>
    <string name="title_activity_driver_details">DriverDetails</string>
    <string name="title_activity_garaj">GarajActivity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_signup">Регистрация</string>
    <string name="title_activity_login">Войти</string>
    <string name="title_activity_account">Настройки</string>

    <string name="title_fragment_forgot_password">Забыли пароль?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history_order">HistoryOrder</string>
    <string name="title_activity_order_details">Детали заказа</string>

    <string name="title_activity_help">Тех. поддержка</string>
    <string name="help">Телефон для справок:\n +996702191111\n</string>
    <string name="WhatsApp">Для WhatsApp сообщений:\n +996702191111\n</string>
    <string name="info">Почта:\n taxi.support@mirsoft.kg\n</string>
    <string name="title_activity_about">О такси (тарифы)</string>
    <string name="tariff_line1">Cтоимость посадки = 40 сом\n</string>
    <string name="tariff_line2">1 километр = 12 сом.\n (округляется до метра)\n</string>
    <string name="tariff_line3">Например:\n 0.25 киллометра = 43 сом.\n 2 километра = 64 сом.\n 3 километра = 76 сом.\n</string>
    <string name="tariff_line4">Ожидание между точками = 3 сом/мин, первые 5 минут бесплатно.\n</string>
    <string name="tariff_line5">Доплата за животное (кошка, собака в специальной сумке) по договоренности с водителем.\n</string>
    <string name="tariff_line6">Если Вы выбрали фиксированную плату,\n то оплачиваете только данную сумму.</string>
    <string name="tariff_line7">Доплата за выезд за пределы города Бишкек,\n  + 40 сом к общей сумме</string>
    <string name="info_version">EasyTaxi Пассажир  для Андроид\n Версия %1$s.</string>
    <string name="balance_hint">*В скором времени будет\n доступна услуга „Сдача“</string>
    <string name="title_activity_start">StartActivity</string>


    <!--MenuDrawer-->
   <string name="tech.support">Техподдержка</string>
   <string name="history">История</string>
    <string name="account.bill">Счёт</string>
    <string name="icon_history_text">История</string>
    <string name="icon_orders_text">Заказы</string>
    <string name="tariff.info">О такси (тарифы)</string>
    <string name="share">Поделиться</string>
    <!--EditText-->
    <string name="phone.number">(555) 123-456</string>
    <string name="phone">Номер телефона</string>
    <string name="password1">******</string>
    <string name="password">Пароль</string>
    <string name="signin">Войти</string>
    <string name="regist">Регистрация</string>
    <string name="forgot.password">Забыли пароль?</string>
    <string name="btn.authorization">Авторизация</string>
    <string name="new.sms">Отправить смс заново</string>
    <string name="btn.next">Далее</string>
    <string name="met.code">Код смс:</string>

    <!--TextView-->
    <string name="authorization">Вам будет выслано смс с кодом\n подтверждения вашего номера.\n Введите его в поле ниже </string>
    <string name="title_activity_test_maps">Карта</string>
    <string name="title_activity_main_splash">MainSplashActivity</string>

    <string name="s_signin">ВОЙТИ</string>
    <string name="s_regist">РЕГИСТРАЦИЯ</string>
    <string name="order_taxi">Заказать\nтакси</string>
    <string name="issue_taxi">Оформить\nтакси</string>
    <string name="search_taxi">Идет\nпоиск\nмашины</string>
    <string name="add_info">Доп.инфо</string>
    <string name="fixed">Фиксированная</string>
    <string name="additional_location">Куда Вас доставить</string>
    <string name="additional_price">Плата</string>
    <string name="client_waiting">ОЖИДАНИЕ</string>
    <string name="client_distance">РАССТОЯНИЕ</string>
    <string name="cancel_order">Отмена</string>
    <string name="cancel_order_upper">ОТМЕНА</string>
    <string name="about_driver">О ВОДИТЕЛЕ</string>



    <!-- logout -->
    <string name="logout.confirm_title">Вы хотите выйти?</string>
    <string name="logout.confirm_text">Выйти</string>
    <string name="logout.cancel_text">Отмена</string>


    <!-- Strings related to login -->
    <string name="prompt_phone_number">Телефон</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>

    <string name="error_invalid_phone">Это поле не правильно заполнено</string>
    <string name="error_invalid_password">Пароль слишком корткий</string>
    <string name="error_incorrect_password">Телефон или пароль указаны неверно</string>
    <string name="error_field_required">Это поле обязяательное</string>
    <string name="error_phone_must_be_unique">Пользователь с таким номером уже существует</string>
    <string name="error_an_error_has_occurred_try_again">Произошла ошибка, попробуйте еще раз</string>
    <string name="error_could_not_connect_to_server">Не удалось подключится к серверу</string>
    <string name="error_invalid_phone_format">Телефон должен состоять из 13 символов</string>
    <string name="error_phone_not_registered">Пользователь с таким номером не зарегистрирован</string>
    <string name="error_could_not_activate">Не удалось активировать</string>
    <string name="error_invalid_activation_code">Неверный код активации</string>

    <!-- Sign up -->
    <string name="signup.submit">Подтвердить</string>
    <string name="signup.default_first_name">Имя</string>
    <string name="signup.default_last_name">Фамилия</string>
    
    <string name="wait_please">Пожалуйста, подождите</string>
    <string name="sms_sent">СМС выслан</string>
    <string name="new_password">Новый пароль:</string>
    <string name="password_changed">Пароль изменен</string>

    <string name="som">сом</string>
    <string name="km">км</string>
    <string name="map">Карта</string>
    
    <string name="car_big">EASY BIG</string>
    <string name="car_easy">EASY</string>
    <string name="car_vip">VIP</string>


</resources>
