<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context="taxi.city.citytaxidriver.HelpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/help"
            android:textColor="@color/translucent_lime"
            android:textSize="@dimen/font_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/WhatsApp"
            android:textColor="@color/translucent_lime"
            android:textSize="@dimen/font_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/info"
            android:textSize="@dimen/font_large"
            android:textColor="@color/translucent_lime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>



    </LinearLayout>

    <TextView
        android:id="@+id/info_version"
        android:text=""
        android:textSize="@dimen/font_large"
        android:textColor="@color/translucent_lime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
